--- a/backend-server/package.json
+++ b/backend-server/package.json
@@ -14,6 +14,7 @@
     "backend-server": "file:",
     "body-parser": "^2.2.0",
     "express": "^5.1.0",
+    "express-fileupload": "^1.5.1",
     "mysql": "^2.18.1"
   },
   "devDependencies": {
